Improve for config able

--- a/webfront/src/index.html
+++ b/webfront/src/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="UTF-8">
 
     <!-- inject:css -->
     <link rel="stylesheet" href="css/semantic.css">
@@ -9,7 +10,7 @@
 </head>
 <body ng-app="BSDShiftApp">
 <div ui-view>
-  {{1+1}}
+
 </div>
 
 <!-- inject:js -->
@@ -17,10 +18,10 @@
 <script src="js/angular-ui-router.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/semantic.js"></script>
-<script src="js/thrift.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/gen-js/MemberService.js"></script>
 <script src="js/gen-js/member_types.js"></script>
+<script src="js/lib/thrift.js"></script>
 <script src="js/app/assign/AssignController.js"></script>
 <script src="js/app/result/ResultController.js"></script>
 <script src="js/app/result/ResultService.js"></script>
