--- a/webfront/src/index.html
+++ b/webfront/src/index.html
@@ -16,15 +16,17 @@
 <!-- inject:js -->
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
+<script src="js/angular-websocket.js"></script>
 <script src="js/jquery.js"></script>
 <script src="js/semantic.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/gen-js/MemberService.js"></script>
 <script src="js/gen-js/member_types.js"></script>
 <script src="js/lib/thrift.js"></script>
-<script src="js/app/assign/AssignController.js"></script>
+<script src="js/app/result/ResultByDayController.js"></script>
 <script src="js/app/result/ResultController.js"></script>
 <script src="js/app/result/ResultService.js"></script>
+<script src="js/app/assign/AssignController.js"></script>
 <!-- endinject -->
 
 
